CSS/custom.css
.jumbotron {
  margin-bottom: 0px;
  background: url(../jumbotron.jpg) no-repeat center center;
  background-position: 0% 25%;
  background-size: cover;
  background-repeat: no-repeat;
  color: white;
  min-height: 500px;
}

.center {
  text-align: center;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  line-height: 1;
  font-size: 1.8em;
  letter-spacing: -1px;
  margin-top: 5px;
  margin-bottom: 10px;
  text-align: center;
  font-weight: normal;
}

footer {
  margin: auto;
}

